23.06.2019
==========
hcxpcaptool: fixed several big endian issues
             show information about handshakes and PMKIDs calculated by a zeroed PMK
             added new option --ignore-zeroed-pmks
--ignore-zeroed-pmks              : do not convert frames which use a zeroed plainmasterkey (PMK)


20.06.2019
==========
hcxpcaptool: complete refactoring of pcapng engine 


19.06.2019
==========
hcxpcaptool: added new option -D
-D <file> : output unsorted device information list
            format = MAC:DEVICEINFO string


16.06.2019
==========
hcxpcaptool: refactored complete tag walk engine due to several stack smashing issues (fsanitize=address)
             added new option to detect known fake frames
--ignore-fake-frames              : do not convert fake frames


14.06.2019
==========
hcxpcaptool: complete rewrite of RSN-IE PMKID detection within association frames and reassociation frames


07.06.2019
==========
hcxpcaptool: added new option to filter output by a single MAC address
             all packets which doesn't contain this MAC in address 1, address 2 or address 3 are ignored.
--filtermac=<mac>                 : filter output by MAC address
                                    format: 112233445566


07.06.2019
==========
hcxpcaptool: detect and convert PMKIDs from clients
read more here:
https://hashcat.net/forum/thread-6661-post-44869.html#pid44869


30.05.2019
==========
hcxtools moved to v5.1.6 due to a bug in v5.1.5

hcxpcaptool: added 2 new options to convert raw PMKIDs
-K <file> : output raw PMKID file (hashcat hashmode -m 16801 new format)
-Z <file> : output raw PMKID file (hashcat hashmode -m 16801 old format and john)

use this options if you would like to verify a PMKID and yo don't have an ESSID
read more here:
https://github.com/ZerBea/hcxtools/issues/92#issuecomment-497128717


19.05.2019
==========
added new useful script: hcxgrep.py

Works like grep, but for hccapx/pmkid hashfiles - those are detected